# app/app/openapi.yaml
@@ -6,6 +6,24 @@ info:
     title: App API
     version: 0.0.1
 paths:
+    /api/admin_dhb/fee:
+        get:
+            tags:
+                - App
+            operationId: App_AdminFee
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/AdminFeeReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /api/admin_dhb/location_list:
         get:
             tags:
@@ -328,6 +346,9 @@ paths:
                                 $ref: '#/components/schemas/Status'
 components:
     schemas:
+        AdminFeeReply:
+            type: object
+            properties: {}
         AdminLocationListReply:
             type: object
             properties:
